# calcbot

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Readme.md
src/: main.rs  parsers.rs
